Fix: Update to correct Aliyun personal instance registry
- Change registry from public instance to personal instance
- Update domain: crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com
- Update all documentation and configuration files
- This should fix the 403 Forbidden error

--- a/给助教的使用说明.md
+++ b/给助教的使用说明.md
@@ -4,7 +4,7 @@
 
 - **项目名称**：AI旅行规划师
 - **GitHub仓库**：https://github.com/zhengshuanghao/git_homework_3
-- **Docker镜像地址**：`registry.cn-hangzhou.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032`
+- **Docker镜像地址**：`crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032`
 - **最新版本**：v1.0.0
 
 ---
@@ -15,7 +15,7 @@
 
 ```bash
 # 1. 拉取镜像
-docker pull registry.cn-hangzhou.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:latest
+docker pull crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:latest
 
 # 2. 运行容器（请替换为实际的API密钥）
 docker run -d \
@@ -25,7 +25,7 @@ docker run -d \
   -e DEEPSEEK_MODEL=你的模型端点ID \
   -e SUPABASE_URL=https://hfhxiwcuikcmtpcyyevl.supabase.co \
   -e SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImhmaHhpd2N1aWtjbXRwY3l5ZXZsIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjI1MzczNDksImV4cCI6MjA3ODExMzM0OX0.u9xX7WOMuYq4fBwJI313vc14OfOuSgabylXqUWFSwTQ \
-  registry.cn-hangzhou.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:latest
+  crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:latest
 
 # 3. 访问应用
 # 打开浏览器访问 http://localhost:8080
@@ -98,9 +98,9 @@ AMAP_API_KEY=62b0a02ed7213d7753d65007051c0c6f
 
 | 标签 | 说明 | 拉取命令 |
 |------|------|---------|
-| `latest` | 最新版本 | `docker pull registry.cn-hangzhou.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:latest` |
-| `v1.0.0` | 稳定版本1.0.0 | `docker pull registry.cn-hangzhou.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:v1.0.0` |
-| `main` | 主分支最新构建 | `docker pull registry.cn-hangzhou.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:main` |
+| `latest` | 最新版本 | `docker pull crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:latest` |
+| `v1.0.0` | 稳定版本1.0.0 | `docker pull crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:v1.0.0` |
+| `main` | 主分支最新构建 | `docker pull crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:main` |
 
 ---
 
@@ -145,7 +145,7 @@ docker ps
 
 # 应该看到类似输出：
 # CONTAINER ID   IMAGE                                                                      STATUS         PORTS
-# abc123def456   registry.cn-hangzhou.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:latest   Up 2 minutes   0.0.0.0:8080->8080/tcp
+# abc123def456   crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032:latest   Up 2 minutes   0.0.0.0:8080->8080/tcp
 ```
 
 ### 查看容器日志
@@ -276,7 +276,7 @@ docker exec ai-travel-planner env | grep -E "ARK|SUPABASE"
 
 ### 链接
 - **GitHub仓库**：https://github.com/zhengshuanghao/git_homework_3
-- **Docker镜像**：registry.cn-hangzhou.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032
+- **Docker镜像**：crpi-t07boaz31v5le95c.cn-hangzhou.personal.cr.aliyuncs.com/ai_travel_planner_zsh/ai_travel_planner_zsh_522025720032
 - **在线演示**：http://localhost:8080（本地部署后）
 
 ---
